# django-monitus

./: README.md  README.rst  setup.cfg  tox.ini
.github/workflows/: test.yml
monitus/: middleware.py
requirements/: compile.py  py38-django30.txt  py38-django31.txt  requirements.in
tests/: async_urls.py  login.html  settings.py  test_ middleware.py  test_async_middleware.py  test_middleware.py  urls.py
