[metadata]
name = django-monitus
version = 0.0.6
description = Tiny error reporting middleware(s) for Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Valentino Gagliardi
author_email = valentino@valentinog.com
maintainer = Valentino Gagliardi
url = https://github.com/valentinogagliardi/django-monitus
project_urls =
    Twitter = https://twitter.com/gagliardi_vale
license = MIT License
keywords =
    django
    middleware
    notification
    admins
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license_file = LICENSE

[options]
include_package_data = true
packages = find:
install_requires = Django>=3.0
python_requires = >=3.7